--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </a>
             </div>
           </div>
-          <button class="shadow-2xl shadow-slate-900 flex mx-auto mt-10 text-white bg-red-500 border-0 py-2 px-8 font-semibold font-sans focus:outline-none hover:bg-red-900 rounded-full text-lg"> <a href="/main.html"> Click Here To Enter in Our Project </a></button>
+          <button class="shadow-2xl shadow-slate-900 flex mx-auto mt-10 text-white bg-red-500 border-0 py-2 px-8 font-semibold font-sans focus:outline-none hover:bg-red-900 rounded-full text-lg"> <a href="main.html"> Click Here To Enter in Our Project </a></button>
         </div>
 <p class="lg:w-1/2 mx-auto leading-loose text-2xl font-mono font-bold text-slate-900"><marquee>Only available for students of 1st semester!!!</marquee></p>
       </section>
