--- a/main.html
+++ b/main.html
@@ -28,14 +28,14 @@
                         </svg>
                       </span>Lecture 1.1.1 Business Communication- Meaning, Types and Models of CommunicationPage
                     </a>
-                    <a href="/Barriers to Communication.pdf">
+                    <a href="Barriers to Communication.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.1.2 Barriers to Effective CommunicationPage
                     </a>
-                    <a href="/Listening and Speaking Skills.pdf">
+                    <a href="Listening and Speaking Skills.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -43,42 +43,42 @@
                       </span>Lecture 1.1.3 LSRW Skills: Listening and Speaking SkillsPage
 
                     </a>
-                    <a href="/Reading and Writing Skills.pdf">
+                    <a href="Reading and Writing Skills.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.1.4 LSRW Skills- Reading and WritingPage
                     </a>
-                    <a href="/Reading Comprehension.pdf">
+                    <a href="Reading Comprehension.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.2.1 Reading ComprehensionPage
                     </a>
-                    <a href="/Note-taking_and_Note-making.pdf">
+                    <a href="Note-taking_and_Note-making.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.2.2 Note taking and Note MakingPage
                     </a>
-                    <a href="/PARAGRAPH WRITING.pdf">
+                    <a href="PARAGRAPH WRITING.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.2.3 Paragraph WritingPage
                     </a>
-                    <a href="/Subject Verb Agreement.pdf">
+                    <a href="Subject Verb Agreement.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.3.2 Subject-Verb AgreementPage
                     </a>
-                    <a href="/One-word substitutions.pdf">
+                    <a href="One-word substitutions.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -105,14 +105,14 @@
                         </svg>
                       </span>Lecture Topic 2.1.1 Ethics in CommunicationPage
                     </a>
-                    <a href="/Business Letters.pdf">
+                    <a href="Business Letters.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture Topic 2.1.2 Business LettersPage
                     </a>
-                    <a href="/Memorandum.pdf">
+                    <a href="Memorandum.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -126,7 +126,7 @@
                         </svg>
                       </span>Lecture Topic 2.1.4 precis WritingPage
                     </a>
-                    <a href="/Office Order.pdf">
+                    <a href="Office Order.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -140,7 +140,7 @@
                         </svg>
                       </span>Lecture 2.2.1 Office order and CircularPage
                     </a>
-                    <a href="/Agenda _ Meeting Minutes.pdf">
+                    <a href="Agenda _ Meeting Minutes.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -161,7 +161,7 @@
                         </svg>
                       </span>Lecture Topic 2.3.2 Collocations and IdiomsPage
                     </a>
-                    <a href="/Correction of sentences.pdf">
+                    <a href="Correction of sentences.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -180,7 +180,7 @@
                         </svg>
                       </span>Lecture Topic 3.1.1 Cross Cultural CommunicationPage
                     </a>
-                    <a href="/SUMMARIZING.pdf">
+                    <a href="SUMMARIZING.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -194,28 +194,28 @@
                         </svg>
                       </span>Lecture Topic 3.2.1 Digital Content Writing: Email, Blogs, WebsitesPage
                     </a>
-                    <a href="/Email writing.pdf">
+                    <a href="Email writing.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture Topic 3.2.2 Email WritingPage
                     </a>
-                    <a href="/Proofreading.pdf">
+                    <a href="Proofreading.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture notes 3.2.3 ProofreadingPage
                     </a>
-                    <a href="/Sentence Improvement.pdf">
+                    <a href="Sentence Improvement.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture Topic 3.3.1 Sentence improvement and Para CompletionPage
                     </a>
-                    <a href="/Cloze Test.pdf">
+                    <a href="Cloze Test.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
