--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
                 <div class="p-4 lg:w-1/4 sm:w-1/2 w-full bg-slate-300 shadow-2xl shadow-slate-900 rounded-md">
                   <h2 class="font-bold title-xl tracking-widest text-slate-900 mb-4 font-sans text-center sm:text-left">UNIT-01</h2>
                   <nav class="flex flex-col sm:items-start sm:text-left text-center items-center -mb-1 space-y-2.5 font-sans font-semibold text-slate-900">
-                    <a href="/Lecture 1_Communication Skills- Meaning, Types, and Models.pdf">
+                    <a href="Lecture 1_Communication Skills- Meaning, Types, and Models.pdf">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
