--- a/main.html
+++ b/main.html
@@ -21,21 +21,21 @@
                 <div class="p-4 lg:w-1/4 sm:w-1/2 w-full bg-slate-300 shadow-2xl shadow-slate-900 rounded-md">
                   <h2 class="font-bold title-xl tracking-widest text-slate-900 mb-4 font-sans text-center sm:text-left">UNIT-01</h2>
                   <nav class="flex flex-col sm:items-start sm:text-left text-center items-center -mb-1 space-y-2.5 font-sans font-semibold text-slate-900">
-                    <a href="/Lecture 1_Communication Skills- Meaning, Types, and Models.pdf" class="hover:text-red-600">
+                    <a href="Lecture 1_Communication Skills- Meaning, Types, and Models.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.1.1 Business Communication- Meaning, Types and Models of CommunicationPage
                     </a>
-                    <a href="/Barriers to Communication.pdf" class="hover:text-red-600">
+                    <a href="Barriers to Communication.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.1.2 Barriers to Effective CommunicationPage
                     </a>
-                    <a href="/Listening and Speaking Skills.pdf" class="hover:text-red-600">
+                    <a href="Listening and Speaking Skills.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -43,42 +43,42 @@
                       </span>Lecture 1.1.3 LSRW Skills: Listening and Speaking SkillsPage
 
                     </a>
-                    <a href="/Reading and Writing Skills.pdf" class="hover:text-red-600">
+                    <a href="Reading and Writing Skills.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.1.4 LSRW Skills- Reading and WritingPage
                     </a>
-                    <a href="/Reading Comprehension.pdf" class="hover:text-red-600">
+                    <a href="Reading Comprehension.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.2.1 Reading ComprehensionPage
                     </a>
-                    <a href="/Note-taking_and_Note-making.pdf" class="hover:text-red-600">
+                    <a href="Note-taking_and_Note-making.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.2.2 Note taking and Note MakingPage
                     </a>
-                    <a href="/PARAGRAPH WRITING.pdf" class="hover:text-red-600">
+                    <a href="PARAGRAPH WRITING.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.2.3 Paragraph WritingPage
                     </a>
-                    <a href="/Subject Verb Agreement.pdf" class="hover:text-red-600">
+                    <a href="Subject Verb Agreement.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture 1.3.2 Subject-Verb AgreementPage
                     </a>
-                    <a href="/One-word substitutions.pdf" class="hover:text-red-600">
+                    <a href="One-word substitutions.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -98,21 +98,21 @@
                 <div class="p-4 lg:w-1/4 sm:w-1/2 w-full bg-slate-900 shadow-2xl shadow-slate-900 rounded-md">
                   <h2 class="font-bold title-xl tracking-widest text-slate-200 mb-4 font-sans text-center sm:text-left">UNIT-02</h2>
                   <nav class="flex flex-col sm:items-start sm:text-left text-center items-center -mb-1 space-y-2.5 font-sans font-semibold text-slate-200">
-                    <a href="/ETHICS IN COMMUNICATION.pdf" class="hover:text-red-500">
+                    <a href="ETHICS IN COMMUNICATION.pdf" class="hover:text-red-500">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center hover:text-red-500">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture Topic 2.1.1 Ethics in CommunicationPage
                     </a>
-                    <a href="/Business Letters.pdf" class="hover:text-red-500">
+                    <a href="Business Letters.pdf" class="hover:text-red-500">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture Topic 2.1.2 Business LettersPage
                     </a>
-                    <a href="/Memorandum.pdf" class="hover:text-red-500">
+                    <a href="Memorandum.pdf" class="hover:text-red-500">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -126,7 +126,7 @@
                         </svg>
                       </span>Lecture Topic 2.1.4 precis WritingPage
                     </a>
-                    <a href="/Office Order.pdf" class="hover:text-red-500">
+                    <a href="Office Order.pdf" class="hover:text-red-500">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -140,7 +140,7 @@
                         </svg>
                       </span>Lecture 2.2.1 Office order and CircularPage
                     </a>
-                    <a href="/Agenda _ Meeting Minutes.pdf" class="hover:text-red-500">
+                    <a href="Agenda _ Meeting Minutes.pdf" class="hover:text-red-500">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -161,7 +161,7 @@
                         </svg>
                       </span>Lecture Topic 2.3.2 Collocations and IdiomsPage
                     </a>
-                    <a href="/Correction of sentences.pdf" class="hover:text-red-500">
+                    <a href="Correction of sentences.pdf" class="hover:text-red-500">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -173,14 +173,14 @@
                 <div class="p-4 lg:w-1/4 sm:w-1/2 w-full bg-slate-300 shadow-2xl shadow-slate-900 rounded-md">
                   <h2 class="font-bold title-xl tracking-widest text-slate-900 mb-4 font-sans text-center sm:text-left">UNIT-03</h2>
                   <nav class="flex flex-col sm:items-start sm:text-left text-center items-center -mb-1 space-y-2.5 font-sans font-semibold text-slate-900">
-                    <a href="/Cross cultural Communication.pdf" class="hover:text-red-600">
+                    <a href="Cross cultural Communication.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture Topic 3.1.1 Cross Cultural CommunicationPage
                     </a>
-                    <a href="/SUMMARIZING.pdf" class="hover:text-red-600">
+                    <a href="SUMMARIZING.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -194,28 +194,28 @@
                         </svg>
                       </span>Lecture Topic 3.2.1 Digital Content Writing: Email, Blogs, WebsitesPage
                     </a>
-                    <a href="/Email writing.pdf" class="hover:text-red-600">
+                    <a href="Email writing.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture Topic 3.2.2 Email WritingPage
                     </a>
-                    <a href="/Proofreading.pdf" class="hover:text-red-600">
+                    <a href="Proofreading.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture notes 3.2.3 ProofreadingPage
                     </a>
-                    <a href="/Sentence Improvement.pdf" class="hover:text-red-600">
+                    <a href="Sentence Improvement.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
                         </svg>
                       </span>Lecture Topic 3.3.1 Sentence improvement and Para CompletionPage
                     </a>
-                    <a href="/Cloze Test.pdf" class="hover:text-red-600">
+                    <a href="Cloze Test.pdf" class="hover:text-red-600">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
@@ -248,7 +248,7 @@
                         </svg>
                       </span>13 Reasons Why Communication Is Important In Life
                     </a>
-                    <a href="/index.html" class="hover:text-red-500">
+                    <a href="https://uk.indeed.com/career-advice/career-development/why-is-communication-important#:~:text=Why%20is%20communication%20important%3F%201%20Increased%20collaboration%20and,Fewer%20workplace%20conflicts%20...%207%20Greater%20motivation%20" class="hover:text-red-500">
                       <span class="bg-indigo-100 text-indigo-500 w-4 h-4 mr-2 rounded-full inline-flex items-center justify-center">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="w-3 h-3" viewBox="0 0 24 24">
                           <path d="M20 6L9 17l-5-5"></path>
