--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Communication Skills</title>
+    <link rel="shortcut icon" href="https://i.pinimg.com/originals/a2/5c/19/a25c198273a072fc9a608ee01a3bff80.png" type="image/x-icon" />
+
+  
+
   <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
